examples/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nats-sinks
  labels:
    app.kubernetes.io/name: nats-sinks
    app.kubernetes.io/part-of: nats-sinks
